@@ -1,3 +1,8 @@
+2005-10-05 15:35 Mike Park  <mike.park@nasa.gov>
+
+	* src/px_main.c (gridDumpBentEdgesForPX) added to dump list of bent
+	edges to input curved elements into MIT ProjectX (PX).
+
 2005-10-05 13:48 Mike Park  <mike.park@nasa.gov>
 
 	* src/Makfile.am (pxNative,pxParasolid) to compile px_main.c driver
